NF: add pip and easy install testing
Some refactoring of the pre_cmds also to make them more flexible.

--- a/master.cfg
+++ b/master.cfg
@@ -140,8 +140,8 @@ c['slavePortnum'] = 9989
 
 # Helper functions and constants
 class GithubBot(object):
-
-    need_nose = True
+    """ Class to make buildbot stuff based round a github repo
+    """
 
     def __init__(self,
                  organization,
@@ -256,7 +256,7 @@ class GithubBot(object):
         factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
         # Any pre-building commands
         for cmd in pre_cmds:
-            factory.addStep(ShellCommand(command=shlex.split(cmd, posix=False)))
+            factory.addStep(ShellCommand(command=cmd))
         # Obviously requires virtualenv on the slave
         venv_params = ['--distribute', '--system-site-packages', 'venv']
         if not python is None:
@@ -294,7 +294,10 @@ class GithubBot(object):
                 pip_depends=None,
                 pre_cmds=(),
                 post_cmds=(),
-                test_env=None):
+                test_env=None,
+                install_cmd=('python', 'setup.py', 'install'),
+                install_wd=None
+        ):
         if test_cmd is None:
             test_cmd = self.test_cmd
         if test_env is None:
@@ -309,10 +312,12 @@ class GithubBot(object):
         if self.build_timeout:
             kwargs['timeout'] = self.build_timeout
         # Install into virtualenv
+        if install_wd is None:
+            install_wd = build_workdir
         factory.addStep(ShellCommand(
-            command=['python', 'setup.py', 'install'],
+            command=install_cmd,
             env=env,
-            workdir=build_workdir,
+            workdir=install_wd,
             **kwargs))
         # Test
         if test_env:
@@ -418,10 +423,13 @@ class GithubBot(object):
                        easy_depends=None,
                        pip_depends=None,
                        pre_cmds=(),
-                       post_cmds=()
+                       post_cmds=(),
+                       install_cmd=('python', 'setup.py', 'install'),
+                       install_wd=None
                        ):
         factory = self.factory(test_cmd, python, easy_depends, pip_depends,
-                               pre_cmds=pre_cmds, post_cmds=post_cmds)
+                               pre_cmds=pre_cmds, post_cmds=post_cmds,
+                               install_cmd=install_cmd, install_wd=install_wd)
         return self._factory_builders(factory, name_slavenames)
 
     def _factory_builders(self, factory, name_slavenames):
@@ -670,11 +678,13 @@ c['schedulers'] = [
                         'sklearn-py2.6-wheezy-sparc',
                         #'sklearn-py3.x-wheezy-sparc',
                         ]),
-    nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
+    # Doc builds
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-doc-builder'], 'doc', 2, 01, True),
     pandas_bot.nightly_scheduler(['pandas-doc-builder'], 'doc', 2, 20, True),
     statsmodels_bot.nightly_scheduler(['statsmodels-doc-builder'], 'doc', 3, 20, True),
     pymvpa_bot.nightly_scheduler(['pymvpa-doc-builder'], 'doc', 4, 20, True),
+    # Checks for easy_install and pip install
     # Windows 32 nightly builds
     nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 'exe-26', 2, 10, True),
     nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 20, True),
@@ -813,7 +823,7 @@ c['builders'].append(BuilderConfig(
         'exe',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python26\python.exe',
-        pre_cmds = [r'python tools\touch_cython_cs.py'])
+        pre_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-27',
@@ -822,7 +832,7 @@ c['builders'].append(BuilderConfig(
         'exe',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python27\python.exe',
-        pre_cmds = [r'python tools\touch_cython_cs.py'])
+        pre_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-32',
@@ -831,7 +841,7 @@ c['builders'].append(BuilderConfig(
         'exe',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python32\python.exe',
-        pre_cmds = [r'python tools\touch_cython_cs.py'])
+        pre_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 # Add bdist builders for OSX
 # Need exe because easy_install makes tests executable on 3.3
@@ -970,7 +980,32 @@ c['builders'].append(BuilderConfig(
         "nipy-examples-3.3",
         "python3")
 ))
-
+# pip and easy_install builders
+hours = 5
+minutes = 0
+for bot in (nibabel_bot, nipy_bot, dipy_bot):
+    for pyver in ('2.7', '3.3'):
+        project = bot.repo
+        for install_cmd in (
+                ('pip', 'install', '--ignore-installed', project),
+                ('easy_install', '-U', project)):
+            name_suff =  'py%s-%s' % (pyver, install_cmd[0])
+            builder_name = '%s-%s' % (project, name_suff)
+            c['builders'] += bot.build_builders(
+                ((builder_name, osx_mountainlion_slaves),),
+                python='python' + pyver,
+                install_cmd = install_cmd,
+                install_wd = 'build/venv')
+            c['schedulers'] += bot.nightly_scheduler(
+                    [builder_name],
+                    name_suff,
+                    hours,
+                    minutes,
+                    True),
+            minutes += 10
+            if minutes == 60:
+                hours += 1
+                minutes = 0
 # Code builders
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py2.6', linux_64_slaves),
@@ -985,7 +1020,7 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.6-xp', xp_32_slaves),
      ('nibabel-py2.7-win7', win7_64_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)))
-# Python 3.2 into virtualenv
+# Python 3s into virtualenv
 c['builders'] += nibabel_bot.build_builders(
     (('nibabel-py3.2', linux_64_slaves),),
     python='python3.2')
@@ -1032,7 +1067,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-arm', arm_slaves),
      ('nipy-py2.6-xp', xp_32_slaves),
      ('nipy-py2.6-sparc', sparc_slaves)))
-# Python 3.2 into virtualenv
+# Python 3s into virtualenv
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py3.2', linux_64_slaves),),
     python='python3.2')
