BF: sklearn -- run  unittests simply by nosetests.  .test() is in dislikes by sklearn developers

--- a/master.cfg
+++ b/master.cfg
@@ -531,7 +531,7 @@ pymvpa_bot = GithubBot('PyMVPA', 'PyMVPA',
 )
 # statsmodels bot, primarily for sparc testing
 sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
-    test_cmd = nptest_command('sklearn', doctests=True),
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe -s sklearn'),
     doc_build_cmd = "make -C doc html",
     built_doc_src = "doc/build",
     easy_depends = ('nose',),
