--- a/master.cfg
+++ b/master.cfg
@@ -99,6 +99,7 @@ osx_leopard_ppc_slaves = ['osx-10.5-ppc']
 osx_tiger_ppc_slaves = ['osx-mini']
 osx_leopard_intel_slaves = ['osx-10.5']
 osx_snowleopard_slaves = ['osx-10.6']
+osx_lion_slaves = ['osx-10.7']
 osx_mountainlion_slaves = ['osx-10.8']
 xp_32_slaves = ['xp-mini']
 win7_64_slaves = ['mike-win7-64']
@@ -1012,6 +1013,7 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.6-32', linux_32_slaves),
      ('nibabel-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nibabel-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nibabel-py2.7-osx-10.7', osx_lion_slaves),
      ('nibabel-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nibabel-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nibabel-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
@@ -1042,6 +1044,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-32', linux_32_slaves),
      ('nitime-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nitime-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nitime-py2.7-osx-10.7', osx_lion_slaves),
      ('nitime-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nitime-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
@@ -1060,6 +1063,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-32', linux_32_slaves),
      ('nipy-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipy-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nipy-py2.7-osx-10.7', osx_lion_slaves),
      ('nipy-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
@@ -1086,6 +1090,7 @@ c['builders'] += dipy_bot_nox.build_builders(
 ))
 c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('dipy-py2.7-osx-10.7', osx_lion_slaves),
      ('dipy-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
@@ -1104,6 +1109,7 @@ c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
      ('nipype-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('nipype-py2.7-osx-10.7', osx_lion_slaves),
      ('nipype-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nipype-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
@@ -1115,6 +1121,7 @@ c['builders'] += regreg_bot.build_builders(
     (('regreg-py2.6', linux_64_slaves),
      ('regreg-py2.6-32', linux_32_slaves),
      ('regreg-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('regreg-py2.7-osx-10.7', osx_lion_slaves),
      ('regreg-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('regreg-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('regreg-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
@@ -1150,6 +1157,7 @@ c['builders'] += pymvpa_bot.build_builders(
     (('pymvpa-py2.x-sid-sparc', sparc_slaves_sid),
      ('pymvpa-py2.x-wheezy-sparc', sparc_slaves_wheezy),
      ('pymvpa-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('pymvpa-py2.7-osx-10.7', osx_lion_slaves),
      ('pymvpa-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('pymvpa-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('pymvpa-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
