NF: bot for fail2ban (on Linuxes and OSXs)

--- a/master.cfg
+++ b/master.cfg
@@ -544,6 +544,11 @@ sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
     built_doc_src = "doc/build",
     easy_depends = ('nose',),
 )
+# Fail2Ban bot
+fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
+    test_cmd = shlex.split('./fail2ban-testcases'),
+)
+
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
@@ -560,6 +565,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                statsmodels_bot,
                                                pymvpa_bot,
                                                sklearn_bot,
+                                               fail2ban_bot,
                                                )]
 
 # pandas is too expensive to test and overwhelmes the sparc box, so
@@ -670,6 +676,22 @@ c['schedulers'] = [
                         'pymvpa-py2.6-osx-10.5-ppc',
                         'pymvpa-py2.6-osx-10.5-intel',
                         'pymvpa-py2.6-xp',
+                        ]),
+    fail2ban_bot.scheduler([
+                        'fail2ban-py2.x-sid-sparc',
+                        # whenever will add testing of 0.9
+                        #'fail2ban-py3.x-sid-sparc',
+                        'fail2ban-py2.x-wheezy-sparc',
+                        #'fail2ban-py3.x-wheezy-sparc',
+                        'fail2ban-py2.7-osx-10.6',
+                        'fail2ban-py2.7-osx-10.8',
+                        'fail2ban-py2.7-osx-10.4-ppc',
+                        'fail2ban-py2.6-osx-10.5-ppc',
+                        'fail2ban-py2.6-osx-10.5-intel',
+                        'fail2ban-py2.7-ppc',
+                        'fail2ban-py2.6-arm',
+                        # needs more fixing
+                        'fail2ban-py2.7-win7',
                         ]),
     sklearn_bot.scheduler([
                         'sklearn-py2.x-sid-sparc',
@@ -1176,6 +1198,19 @@ c['builders'].append(
       slavenames=experimental,
       factory=factory_buildout_nibabel('python2.4')))
 """
+# Fail2ban
+c['builders'] += fail2ban_bot.build_builders(
+    (('fail2ban-py2.x-sid-sparc', sparc_slaves_sid),
+     ('fail2ban-py2.x-wheezy-sparc', sparc_slaves_wheezy),
+     ('fail2ban-py2.7-osx-10.6', osx_snowleopard_slaves),
+     ('fail2ban-py2.7-osx-10.8', osx_mountainlion_slaves),
+     ('fail2ban-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
+     ('fail2ban-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('fail2ban-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
+     ('fail2ban-py2.7-ppc', debian_ppc_slaves),
+     ('fail2ban-py2.6-arm', arm_slaves),
+     # ('fail2ban-py2.7-win7', win7_64_slaves),
+    ))
 
 # Assign all builders categories -- project names, to improve status visualizations
 for b in c['builders']:
