NF: turn on OSX 10.7 builds

--- a/master.cfg
+++ b/master.cfg
@@ -590,6 +590,7 @@ c['schedulers'] = [
                            'nibabel-py2.6-arm',
                            'nibabel-py2.7-osx-10.4-ppc',
                            'nibabel-py2.7-osx-10.6',
+                           'nibabel-py2.7-osx-10.7',
                            'nibabel-py2.7-osx-10.8',
                            'nibabel-py2.6-osx-10.5-ppc',
                            'nibabel-py2.6-osx-10.5-intel',
@@ -615,6 +616,7 @@ c['schedulers'] = [
                         'nipy-py2.6-arm',
                         'nipy-py2.7-osx-10.4-ppc',
                         'nipy-py2.7-osx-10.6',
+                        'nipy-py2.7-osx-10.7',
                         'nipy-py2.7-osx-10.8',
                         'nipy-py2.6-osx-10.5-ppc',
                         'nipy-py2.6-osx-10.5-intel',
@@ -626,6 +628,7 @@ c['schedulers'] = [
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
                         'dipy-py2.7-osx-10.6',
+                        'dipy-py2.7-osx-10.7',
                         'dipy-py2.7-osx-10.8',
                         'dipy-py2.6-osx-10.5-ppc',
                         'dipy-py2.6-osx-10.5-intel',
@@ -644,7 +647,8 @@ c['schedulers'] = [
     regreg_bot.scheduler(['regreg-py2.6',
                           'regreg-py2.6-32',
                           'regreg-py2.6-xp',
-                          'regreg-py2.7-osx-10.6',
+                          'regreg-py2.7-osx-10.8',
+                          'regreg-py2.7-osx-10.7',
                           'regreg-py2.7-osx-10.8',
                           'regreg-py2.7-osx-10.4-ppc',
                           'regreg-py2.6-osx-10.5-ppc',
