BF: don't schedule against build that doesn't exist
builder doesn't exist because it's commented out.

--- a/master.cfg
+++ b/master.cfg
@@ -695,7 +695,7 @@ c['schedulers'] = [
                         'fail2ban-py2.7-ppc',
                         'fail2ban-py2.6-arm',
                         # needs more fixing
-                        'fail2ban-py2.7-win7',
+                        # 'fail2ban-py2.7-win7',
                         ]),
     sklearn_bot.scheduler([
                         'sklearn-py2.x-sid-sparc',
