NF: add single git-scheduled sympy build

--- a/master.cfg
+++ b/master.cfg
@@ -548,6 +548,14 @@ sklearn_bot = GithubBot('scikit-learn', 'scikit-learn',
 fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
     test_cmd = shlex.split('./fail2ban-testcases'),
 )
+# Sympy
+sympy_bot = GithubBot('sympy', 'sympy',
+    test_cmd = ['python', '-c',
+    'import sys; import sympy; sys.exit(not sympy.test())'],
+    doc_build_cmd = "make html-errors",
+    pip_depends = ('gmpy==1.16',),
+    doc_pip_depends = ('sphinx==1.1.3',)
+)
 
 ####### CHANGESOURCES
 
@@ -566,6 +574,7 @@ c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                pymvpa_bot,
                                                sklearn_bot,
                                                fail2ban_bot,
+                                               sympy_bot,
                                                )]
 
 # pandas is too expensive to test and overwhelmes the sparc box, so
@@ -703,6 +712,9 @@ c['schedulers'] = [
                         #'sklearn-py3.x-sid-sparc',
                         'sklearn-py2.6-wheezy-sparc',
                         #'sklearn-py3.x-wheezy-sparc',
+                        ]),
+    sympy_bot.scheduler([
+                        'sympy-py2.7-32',
                         ]),
     # Doc builds
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -1221,6 +1233,10 @@ c['builders'] += fail2ban_bot.build_builders(
      ('fail2ban-py2.7-ppc', debian_ppc_slaves),
      ('fail2ban-py2.6-arm', arm_slaves),
      # ('fail2ban-py2.7-win7', win7_64_slaves),
+    ))
+# Sympy
+c['builders'] += sympy_bot.build_builders(
+    (('sympy-py2.7-32', linux_32_slaves),
     ))
 
 # Assign all builders categories -- project names, to improve status visualizations
