NF: add mail notifier for sympy

--- a/master.cfg
+++ b/master.cfg
@@ -1251,8 +1251,18 @@ for b in c['builders']:
 
 c['status'] = []
 
-from buildbot.status import html
+from buildbot.status import html, mail
 from buildbot.status.web import auth, authz
+
+c['status'] = []
+
+mn = mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
+                      mode='failing',
+                      categories=('sympy',),
+                      sendToInterestedUsers=False,
+                      extraRecipients=['matthew.brett@berkeley.edu'])
+
+c['status'].append(mn)
 
 http_auth = auth.HTPasswdAuth('bot_htpasswd')
 
