--- a/master.cfg
+++ b/master.cfg
@@ -1296,7 +1296,7 @@ c['titleURL'] = "http://nipy.org"
 # with an externally-visible host name which the buildbot cannot figure out
 # without some help.
 
-c['buildbotURL'] = "http://localhost:8010/"
+c['buildbotURL'] = "http://nipy.bic.berkeley.edu"
 
 ####### DB URL
 
