BF: make matplotlib backend svg for sympy tests

--- a/master.cfg
+++ b/master.cfg
@@ -551,7 +551,12 @@ fail2ban_bot = GithubBot('fail2ban', 'fail2ban',
 # Sympy
 sympy_bot = GithubBot('sympy', 'sympy',
     test_cmd = ['python', '-c',
-    'import sys; import sympy; dt=sympy.doctest(); t=sympy.test(); sys.exit(not (dt and t))'],
+    'import sys; '
+    'import sympy; '
+    'open("matplotlibrc", "wt").write("backend : svg"); '
+    'dt=sympy.doctest(); '
+    't=sympy.test(); '
+    'sys.exit(not (dt and t))'],
     doc_build_cmd = "make html-errors",
     pip_depends = ('gmpy==1.16',),
     doc_pip_depends = ('sphinx==1.1.3',)
