RF: need agg as backend to matplotlib

--- a/master.cfg
+++ b/master.cfg
@@ -553,7 +553,7 @@ sympy_bot = GithubBot('sympy', 'sympy',
     test_cmd = ['python', '-c',
     'import sys; '
     'import sympy; '
-    'open("matplotlibrc", "wt").write("backend : svg"); '
+    'open("matplotlibrc", "wt").write("backend : agg"); '
     'dt=sympy.doctest(); '
     't=sympy.test(); '
     'sys.exit(not (dt and t))'],
