RF: Send Aaron Sympy feedback

--- a/master.cfg
+++ b/master.cfg
@@ -1265,7 +1265,7 @@ mn = mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
                       mode='failing',
                       categories=('sympy',),
                       sendToInterestedUsers=False,
-                      extraRecipients=['matthew.brett@berkeley.edu'])
+                      extraRecipients=['asmeurer@gmail.com'])
 
 c['status'].append(mn)
 
