RF: allow tuples for pip_depends, easy_depends

--- a/master.cfg
+++ b/master.cfg
@@ -229,19 +229,21 @@ class GithubBot(object):
 
     def _easy_install(self, factory, easy_depends, env):
         for pkg_spec in easy_depends:
-            factory.addStep(ShellCommand(command=[
-                        'easy_install', pkg_spec], env=env))
+            if isinstance(pkg_spec, basestring):
+                pkg_spec = [pkg_spec]
+            cmd = ['easy_install'] + list(pkg_spec)
+            factory.addStep(ShellCommand(command=cmd, env=env))
 
     def _pip_install(self, factory, pip_depends, env):
         for pkg_spec in pip_depends:
             # We need the 'ignore-installed' flag to force pip to install the
             # programs in the virtualenv.  Otherwise pip finds the programs
             # (like 'nose') already installed; these then call the system
-            # python and we don't get the virtualenv
-            factory.addStep(ShellCommand(command=[
-                        'pip', 'install',
-                        '--ignore-installed',  # fresh install
-                        pkg_spec],
+            # python and we don't get the virtualenv python.
+            if isinstance(pkg_spec, basestring):
+                pkg_spec = [pkg_spec]
+            cmd = ['pip', 'install', '--ignore-installed']  # fresh install
+            factory.addStep(ShellCommand(command=cmd + list(pkg_spec),
                         env=env))
 
     def _code_build_factory(self,
@@ -558,7 +560,9 @@ sympy_bot = GithubBot('sympy', 'sympy',
     't=sympy.test(); '
     'sys.exit(not (dt and t))'],
     doc_build_cmd = "make html-errors",
-    pip_depends = ('gmpy==1.16',),
+    pip_depends = (
+        'gmpy==1.16',
+        ('--no-deps', 'https://github.com/Theano/Theano/archive/master.zip')),
     doc_pip_depends = ('sphinx==1.1.3',)
 )
 
