RF: switch sympy build to faster machine

--- a/master.cfg
+++ b/master.cfg
@@ -723,7 +723,7 @@ c['schedulers'] = [
                         #'sklearn-py3.x-wheezy-sparc',
                         ]),
     sympy_bot.scheduler([
-                        'sympy-py2.7-32',
+                        'sympy-py2.7-osx-10.8',
                         ]),
     # Doc builds
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -1245,7 +1245,7 @@ c['builders'] += fail2ban_bot.build_builders(
     ))
 # Sympy
 c['builders'] += sympy_bot.build_builders(
-    (('sympy-py2.7-32', linux_32_slaves),
+    (('sympy-py2.7-osx-10.8', osx_mountainlion_slaves),
     ))
 
 # Assign all builders categories -- project names, to improve status visualizations
