BF: add slash to site URL

--- a/master.cfg
+++ b/master.cfg
@@ -1305,7 +1305,7 @@ c['titleURL'] = "http://nipy.org"
 # with an externally-visible host name which the buildbot cannot figure out
 # without some help.
 
-c['buildbotURL'] = "http://nipy.bic.berkeley.edu"
+c['buildbotURL'] = "http://nipy.bic.berkeley.edu/"
 
 ####### DB URL
 
