NF: add slow tests for sympy

--- a/master.cfg
+++ b/master.cfg
@@ -558,7 +558,8 @@ sympy_bot = GithubBot('sympy', 'sympy',
     'open("matplotlibrc", "wt").write("backend : agg"); '
     'dt=sympy.doctest(); '
     't=sympy.test(); '
-    'sys.exit(not (dt and t))'],
+    'st=sympy.test(slow=True); '
+    'sys.exit(not (dt and t and st))'],
     doc_build_cmd = "make html-errors",
     pip_depends = (
         'gmpy==1.16',
