NF: add nisext tests to nibabel test run

--- a/master.cfg
+++ b/master.cfg
@@ -477,7 +477,7 @@ def nptest_command(pkg_name,
 
 
 nibabel_bot = GithubBot('nipy', 'nibabel',
-    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest nibabel'),
+    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest nibabel nisext'),
     doc_build_cmd = "cd doc && make html",
     built_doc_src = "build/html",
     pip_depends = ('nose',)
