RF: move sympy tests to bongo laptop; make verbose

--- a/master.cfg
+++ b/master.cfg
@@ -558,13 +558,14 @@ sympy_bot = GithubBot('sympy', 'sympy',
     'open("matplotlibrc", "wt").write("backend : agg"); '
     'dt=sympy.doctest(); '
     't=sympy.test(); '
-    'st=sympy.test(slow=True); '
+    'st=sympy.test(slow=True, verbose=True); '
     'sys.exit(not (dt and t and st))'],
     doc_build_cmd = "make html-errors",
     pip_depends = (
         'gmpy==1.16',
         ('--no-deps', 'https://github.com/Theano/Theano/archive/master.zip')),
-    doc_pip_depends = ('sphinx==1.1.3',)
+    doc_pip_depends = ('sphinx==1.1.3',),
+    # build_timeout = 28800, # allow for very slow sympy tests
 )
 
 ####### CHANGESOURCES
@@ -724,7 +725,7 @@ c['schedulers'] = [
                         #'sklearn-py3.x-wheezy-sparc',
                         ]),
     sympy_bot.scheduler([
-                        'sympy-py2.7-osx-10.8',
+                        'sympy-py2.6-32',
                         ]),
     # Doc builds
     nibabel_bot.nightly_scheduler(['nibabel-doc-builder'], 'doc', 2, 20, True),
@@ -1246,7 +1247,7 @@ c['builders'] += fail2ban_bot.build_builders(
     ))
 # Sympy
 c['builders'] += sympy_bot.build_builders(
-    (('sympy-py2.7-osx-10.8', osx_mountainlion_slaves),
+    (('sympy-py2.6-32', linux_32_slaves),
     ))
 
 # Assign all builders categories -- project names, to improve status visualizations
