Add Fedora build slave

--- a/master.cfg
+++ b/master.cfg
@@ -104,6 +104,7 @@ osx_mountainlion_slaves = ['osx-10.8']
 xp_32_slaves = ['xp-mini']
 win7_64_slaves = ['mike-win7-64']
 arm_slaves = ['arm-raspberry-pi']
+fedora_slaves = ['i20-fed19']
 
 # Locks to prevent resource exhaustion which might need to be defined
 # for some slaves.  It seems that locks need to be given to BuildSlave
@@ -608,6 +609,7 @@ c['schedulers'] = [
                            'nibabel-py2.6-sparc',
                            'nibabel-py2.7-ppc',
                            'nibabel-py2.6-arm',
+                           'nibabel-py2.7-fedora',
                            'nibabel-py2.7-osx-10.4-ppc',
                            'nibabel-py2.7-osx-10.6',
                            'nibabel-py2.7-osx-10.7',
@@ -622,6 +624,7 @@ c['schedulers'] = [
     nitime_bot.scheduler(['nitime-py2.6',
                           'nitime-py2.6-32',
                           'nitime-py2.6-xp',
+                          'nitime-py2.7-fedora',
                           'nitime-py2.7-osx-10.4-ppc',
                           'nitime-py2.7-osx-10.6',
                           'nitime-py2.7-osx-10.8',
@@ -634,6 +637,7 @@ c['schedulers'] = [
                         'nipy-py2.6-sparc',
                         'nipy-py2.7-ppc',
                         'nipy-py2.6-arm',
+                        'nipy-py2.7-fedora',
                         'nipy-py2.7-osx-10.4-ppc',
                         'nipy-py2.7-osx-10.6',
                         'nipy-py2.7-osx-10.7',
@@ -647,6 +651,7 @@ c['schedulers'] = [
     dipy_bot.scheduler(['dipy-py2.6',
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
+                        'dipy-py2.7-fedora',
                         'dipy-py2.7-osx-10.6',
                         'dipy-py2.7-osx-10.7',
                         'dipy-py2.7-osx-10.8',
@@ -658,6 +663,7 @@ c['schedulers'] = [
     nipype_bot.scheduler(['nipype-py2.6',
                           'nipype-py2.6-32',
                           'nipype-py2.6-xp',
+                          'nipype-py2.7-fedora',
                           'nipype-py2.7-osx-10.6',
                           'nipype-py2.7-osx-10.8',
                           'nipype-py2.7-osx-10.4-ppc',
@@ -667,6 +673,7 @@ c['schedulers'] = [
     regreg_bot.scheduler(['regreg-py2.6',
                           'regreg-py2.6-32',
                           'regreg-py2.6-xp',
+                          'regreg-py2.7-fedora',
                           'regreg-py2.7-osx-10.8',
                           'regreg-py2.7-osx-10.7',
                           'regreg-py2.7-osx-10.8',
@@ -1067,6 +1074,7 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
      ('nibabel-py2.6-arm', arm_slaves),
+     ('nibabel-py2.7-fedora', fedora_slaves),
      ('nibabel-py2.6-xp', xp_32_slaves),
      ('nibabel-py2.7-win7', win7_64_slaves),
      ('nibabel-py2.6-sparc', sparc_slaves)))
@@ -1097,6 +1105,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arm', arm_slaves),
+     ('nitime-py2.7-fedora', fedora_slaves),
      ('nitime-py2.6-xp', xp_32_slaves)))
 c['builders'] += nitime_arokem_bot.build_builders(
     (('nitime-py2.6-arokem', linux_64_slaves),
@@ -1117,6 +1126,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nipy-py2.7-ppc', debian_ppc_slaves),
      ('nipy-py2.6-arm', arm_slaves),
+     ('nipy-py2.7-fedora', fedora_slaves),
      ('nipy-py2.6-xp', xp_32_slaves),
      ('nipy-py2.6-sparc', sparc_slaves)))
 # Python 3s into virtualenv
@@ -1143,6 +1153,7 @@ c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('dipy-py2.6-arm', arm_slaves),
+     ('dipy-py2.7-fedora', fedora_slaves),
      ('dipy-py2.6-xp', xp_32_slaves),
      ('dipy-py2.6-sparc', sparc_slaves)))
 # Python 3.2 into virtualenv
@@ -1163,6 +1174,7 @@ c['builders'] += nipype_bot.build_builders(
      ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipype-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nipype-py2.6-arm', arm_slaves),
+     ('nipype-py2.7-fedora', fedora_slaves),
      ('nipype-py2.6-xp', xp_32_slaves),
      ('nipype-py2.6-sparc', sparc_slaves)))
 c['builders'] += regreg_bot.build_builders(
@@ -1175,6 +1187,7 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('regreg-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('regreg-py2.6-arm', arm_slaves),
+     ('regreg-py2.7-fedora', fedora_slaves),
      ('regreg-py2.6-xp', xp_32_slaves),
      ('regreg-py2.6-sparc', sparc_slaves)))
 # Pandas - can be tested only on recent debian releases
