RF: set matplotlib backend to non-interactive for dipy

--- a/master.cfg
+++ b/master.cfg
@@ -498,7 +498,12 @@ nipy_bot = GithubBot('nipy', 'nipy',
     pip_depends = ('nose', 'sympy', 'nibabel')
 )
 dipy_bot = GithubBot('nipy', 'dipy',
-    test_cmd = shlex.split('nosetests --verbosity=3 --exe --with-doctest dipy'),
+    test_cmd = ['python', '-c',
+    'import nose; '
+    'from nose.plugins import doctests ;'
+    'open("matplotlibrc", "wt").write("backend : agg"); '
+    'argv = ["", "", "--with-doctest", "--verbosity=3", "--exe", "dipy"]; '
+    'nose.core.TestProgram(argv=argv, addplugins=[doctests.Doctest()])'],
     pip_depends = ('nose', 'cython>=0.17', 'nibabel')
 )
 # dipy bot for linux machines with optional easy_depends and pip_depends that
