RF: move pre_cmds after virtualenv creation
Rename `pre_cmds` to `pre_build_cmds`.

Put copies into nipy binary builders to allow `dipnost` to work with
multiprocessing.

We're getting errors like:

http://nipy.bic.berkeley.edu/builders/dipy-bdist32-26/builds/52/steps/shell_6/logs/stdio

--- a/master.cfg
+++ b/master.cfg
@@ -251,21 +251,21 @@ class GithubBot(object):
                             python=None,
                             easy_depends=None,
                             pip_depends=None,
-                            pre_cmds=()):
+                            pre_build_cmds=()):
         if easy_depends is None:
             easy_depends = self.easy_depends
         if pip_depends is None:
             pip_depends = self.pip_depends
         factory = BuildFactory()
         factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
-        # Any pre-building commands
-        for cmd in pre_cmds:
-            factory.addStep(ShellCommand(command=cmd))
         # Obviously requires virtualenv on the slave
         venv_params = ['--distribute', '--system-site-packages', 'venv']
         if not python is None:
             venv_params = ['--python=' + python] + venv_params
         factory.addStep(ShellCommand(command=['virtualenv'] + venv_params))
+        # Any pre-building commands
+        for cmd in pre_build_cmds:
+            factory.addStep(ShellCommand(command=cmd))
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
@@ -296,7 +296,7 @@ class GithubBot(object):
                 python=None,
                 easy_depends=None,
                 pip_depends=None,
-                pre_cmds=(),
+                pre_build_cmds=(),
                 post_cmds=(),
                 test_env=None,
                 install_cmd=('python', 'setup.py', 'install'),
@@ -307,7 +307,7 @@ class GithubBot(object):
         if test_env is None:
             test_env = self.test_env
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends, pre_cmds)
+            python, easy_depends, pip_depends, pre_build_cmds)
         # Additional options for ShellCommands, if provided.  To not
         # rely on knowing internal logic (either handles None as the
         # default value), we explicitly construct a dictionary only
@@ -339,11 +339,11 @@ class GithubBot(object):
                       python=None,
                       easy_depends=None,
                       pip_depends=None,
-                      pre_cmds=()):
+                      pre_build_cmds=()):
         if test_cmd is None:
             test_cmd = self.test_cmd
         factory, env, workdir, build_workdir = self._code_build_factory(
-            python, easy_depends, pip_depends, pre_cmds)
+            python, easy_depends, pip_depends, pre_build_cmds)
         # Build binary format(s)
         if python is None: # Use virtualenv python
             my_python = 'python'
@@ -426,13 +426,13 @@ class GithubBot(object):
                        python=None,
                        easy_depends=None,
                        pip_depends=None,
-                       pre_cmds=(),
+                       pre_build_cmds=(),
                        post_cmds=(),
                        install_cmd=('python', 'setup.py', 'install'),
                        install_wd=None
                        ):
         factory = self.factory(test_cmd, python, easy_depends, pip_depends,
-                               pre_cmds=pre_cmds, post_cmds=post_cmds,
+                               pre_build_cmds=pre_build_cmds, post_cmds=post_cmds,
                                install_cmd=install_cmd, install_wd=install_wd)
         return self._factory_builders(factory, name_slavenames)
 
@@ -884,7 +884,7 @@ c['builders'].append(BuilderConfig(
         'exe',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python26\python.exe',
-        pre_cmds = [['python', r'tools\touch_cython_cs.py']])
+        pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-27',
@@ -893,7 +893,7 @@ c['builders'].append(BuilderConfig(
         'exe',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python27\python.exe',
-        pre_cmds = [['python', r'tools\touch_cython_cs.py']])
+        pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-32',
@@ -902,7 +902,7 @@ c['builders'].append(BuilderConfig(
         'exe',
         test_cmd = nipy_test_cmd,
         python = r'c:\Python32\python.exe',
-        pre_cmds = [['python', r'tools\touch_cython_cs.py']])
+        pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 # Add bdist builders for OSX
 # Need exe because easy_install makes tests executable on 3.3
@@ -934,12 +934,13 @@ c['builders'].append(BuilderConfig(
 ##############################
 # Dipy builders
 ##############################
-win_dipy_test_cmd = ['python',  r'..\tools\dipnost', 'dipy']
+win_dipy_test_cmd = ['python',  r'dipnost', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-26',
     slavenames=xp_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
+        pre_build_cmds = [['copy', r'tools\dipnost', 'venv']],
         test_cmd=win_dipy_test_cmd,
         python=r'c:\Python26\python.exe')
 ))
@@ -948,6 +949,7 @@ c['builders'].append(BuilderConfig(
     slavenames=xp_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
+        pre_build_cmds = [['copy', r'tools\dipnost', 'venv']],
         test_cmd=win_dipy_test_cmd,
         python=r'c:\Python27\python.exe')
 ))
@@ -956,18 +958,20 @@ c['builders'].append(BuilderConfig(
     slavenames=xp_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
+        pre_build_cmds = [['copy', r'tools\dipnost', 'venv']],
         test_cmd=win_dipy_test_cmd,
         python=r'c:\Python32\python.exe')
 ))
 # Add bdist builders for OSX
 # Each of the tested _system_ pythons will need:
 # * numpy, scipy, virtualenv, bdist_mpkg
-osx_dipy_test_cmd = ['python',  '../tools/dipnost', '--exe', '--verbosity=3', 'dipy']
+osx_dipy_test_cmd = ['python',  'dipnost', '--exe', '--verbosity=3', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
         'egg',
+        pre_build_cmds = [['cp', 'tools/dipnost', 'venv']],
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/2.6/bin/python')
 ))
@@ -976,6 +980,7 @@ c['builders'].append(BuilderConfig(
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
         'egg',
+        pre_build_cmds = [['cp', 'tools/dipnost', 'venv']],
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/2.7/bin/python')
 ))
@@ -984,6 +989,7 @@ c['builders'].append(BuilderConfig(
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
         'egg',
+        pre_build_cmds = [['cp', 'tools/dipnost', 'venv']],
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/3.3/bin/python3')
 ))
