--- a/master.cfg
+++ b/master.cfg
@@ -934,13 +934,16 @@ c['builders'].append(BuilderConfig(
 ##############################
 # Dipy builders
 ##############################
-win_dipy_test_cmd = ['python',  r'dipnost', 'dipy']
+# We have to jump through some difficult hoops to put the `dipnost` command on
+# the path, because multiprocessing gets very unhappy if you try and run stuff
+# from a command that is not on the path
+win_dipy_test_cmd = ['python',  r'Scripts\dipnost', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-26',
     slavenames=xp_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
-        pre_build_cmds = [['copy', r'tools\dipnost', 'venv']],
+        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\Scripts']],
         test_cmd=win_dipy_test_cmd,
         python=r'c:\Python26\python.exe')
 ))
@@ -949,7 +952,7 @@ c['builders'].append(BuilderConfig(
     slavenames=xp_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
-        pre_build_cmds = [['copy', r'tools\dipnost', 'venv']],
+        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\Scripts']],
         test_cmd=win_dipy_test_cmd,
         python=r'c:\Python27\python.exe')
 ))
@@ -958,20 +961,20 @@ c['builders'].append(BuilderConfig(
     slavenames=xp_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
-        pre_build_cmds = [['copy', r'tools\dipnost', 'venv']],
+        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\Scripts']],
         test_cmd=win_dipy_test_cmd,
         python=r'c:\Python32\python.exe')
 ))
 # Add bdist builders for OSX
 # Each of the tested _system_ pythons will need:
 # * numpy, scipy, virtualenv, bdist_mpkg
-osx_dipy_test_cmd = ['python',  'dipnost', '--exe', '--verbosity=3', 'dipy']
+osx_dipy_test_cmd = ['python',  'bin/dipnost', '--exe', '--verbosity=3', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist-mpkg-2.6',
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
         'egg',
-        pre_build_cmds = [['cp', 'tools/dipnost', 'venv']],
+        pre_build_cmds = [['cp', 'tools/dipnost', 'venv/bin']],
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/2.6/bin/python')
 ))
@@ -980,7 +983,7 @@ c['builders'].append(BuilderConfig(
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
         'egg',
-        pre_build_cmds = [['cp', 'tools/dipnost', 'venv']],
+        pre_build_cmds = [['cp', 'tools/dipnost', 'venv/bin']],
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/2.7/bin/python')
 ))
@@ -989,7 +992,7 @@ c['builders'].append(BuilderConfig(
     slavenames=['osx-10.6'],
     factory=dipy_bot.bdist_factory(
         'egg',
-        pre_build_cmds = [['cp', 'tools/dipnost', 'venv']],
+        pre_build_cmds = [['cp', 'tools/dipnost', 'venv/bin']],
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/3.3/bin/python3')
 ))
